--- a/_includes/partials/footer.njk
+++ b/_includes/partials/footer.njk
@@ -4,7 +4,7 @@
   <a href="https://www.11ty.dev/">Eleventy</a>
   <br />
 
-  Subscribe to my <a href="/feed/feed.xml">RSS Feed</a>&nbsp;<img
+  Subscribe to my <a href="/feed/rss.xml">RSS Feed</a>&nbsp;<img
     src="/images/rss-512.png"
     class="img-txt"
   />
