--- a/css/index.css
+++ b/css/index.css
@@ -234,3 +234,12 @@ hr {
 .img-txt {
   height: 1.1em;
 }
+
+.rss svg {
+  background-color: orange;
+  border-radius: 0.3rem;
+  width: 1rem;
+  height: 1rem;
+  fill: white;
+  padding: 0.1rem;
+}
