--- a/_includes/partials/head.njk
+++ b/_includes/partials/head.njk
@@ -43,10 +43,7 @@
 <meta name="generator" content="{{ eleventy.generator }}" />
 
 <link rel="stylesheet" href="/css/index.css" />
-<link
-  href="https://unpkg.com/prismjs@1.29.0/themes/prism-tomorrow.min.css"
-  rel="stylesheet"
-/>
+<link rel="stylesheet" href="/css/prism.css" />
 
 <!-- Feeds -->
 <link
