--- a/_includes/partials/head.njk
+++ b/_includes/partials/head.njk
@@ -38,7 +38,11 @@
   content="{{ description or metadata.description }}"
 />
 <meta property="og:url" content="{{ url or metadata.url }}" />
-<meta property="og:type" content="{{ ogType or metadata.opengraph.type }}" />
+<meta
+  property="og:type"
+  content="{{ opengraph.type or metadata.opengraph.type }}"
+/>
+<meta property="og:image" content="{{ opengraph.image or metadata.url }}" />
 
 <meta name="generator" content="{{ eleventy.generator }}" />
 
