--- a/_includes/partials/head.njk
+++ b/_includes/partials/head.njk
@@ -6,6 +6,13 @@
 <meta name="description" content="{{ description or metadata.description }}" />
 <meta name="keywords" content="{{ metadata.tags | join(",")}}" />
 
+<meta name="theme-color" content="#fff" media="(prefers-color-scheme: light)" />
+<meta
+  name="theme-color"
+  content="#01242e"
+  media="(prefers-color-scheme: dark)"
+/>
+
 <!-- Favicons -->
 
 <link
@@ -28,7 +35,6 @@
 <link rel="manifest" href="/favicons/site.webmanifest" />
 <link rel="mask-icon" href="/favicons/safari-pinned-tab.svg" color="#5bbad5" />
 <meta name="msapplication-TileColor" content="#da532c" />
-<meta name="theme-color" content="#ffffff" />
 
 <!-- Open Graph -->
 <meta property="og:site_name" content="{{ metadata.title }}" />
