--- a/public/css/index.css
+++ b/public/css/index.css
@@ -10,6 +10,7 @@
   --visited-color: #8b6fcb;
   --code-background-color: #f2f2f2;
   --code-color: #222;
+  --code-border-color: #ccc;
   --blockquote-color: #222;
 }
 
@@ -22,8 +23,21 @@
     --visited-color: #8b6fcb;
     --code-background-color: #2d2d2d;
     --code-color: #ddd;
+    --code-border-color: #e8e8e8;
     --blockquote-color: #ccc;
   }
+}
+
+[data-theme="light"] {
+  --background-color: #fff;
+  --heading-color: #222;
+  --text-color: #444;
+  --link-color: #3273dc;
+  --visited-color: #8b6fcb;
+  --code-background-color: #f2f2f2;
+  --code-color: #222;
+  --code-border-color: #ccc;
+  --blockquote-color: #222;
 }
 
 [data-theme="dark"] {
@@ -34,6 +48,7 @@
   --visited-color: #8b6fcb;
   --code-background-color: #2d2d2d;
   --code-color: #ddd;
+  --code-border-color: #e8e8e8;
   --blockquote-color: #ccc;
 }
 
@@ -118,7 +133,7 @@ p code {
   background-color: var(--code-background-color);
   color: var(--code-color);
   border-radius: 3px;
-  border: 1px solid #ccc;
+  border: 1px solid var(--code-border-color);
   overflow-x: auto;
 }
 
@@ -175,10 +190,6 @@ ul.blog-posts li {
 ul.blog-posts li h3 {
   margin-bottom: 0.2em;
 }
-
-/* ul.blog-posts li span {
-  flex: 0 0 130px;
-} */
 
 ul.blog-posts li a:visited {
   color: var(--visited-color);
@@ -250,15 +261,6 @@ hr {
 
 .img-txt {
   height: 1.1em;
-}
-
-.rss svg {
-  background-color: orange;
-  border-radius: 0.3rem;
-  width: 1rem;
-  height: 1rem;
-  fill: white;
-  padding: 0.1rem;
 }
 
 video,
